Sorata, that ain't right :japanese_ogre:

--- a/traders/EmuTarkov-AllClothesForFree/mod.config.json
+++ b/traders/EmuTarkov-AllClothesForFree/mod.config.json
@@ -1,6 +1,6 @@
 {
 	"name": "AllClothesForFree",
-	"author": "JustEmuTarkov",
+	"author": "EmuTarkov",
 	"description": "Make all tactical clothes for free",
 	"license": "MIT",
 	"releases": [
