--- a/bots/Sorata-AdvancedBotsLoadouts-1.0.8/mod.config.json
+++ b/bots/Sorata-AdvancedBotsLoadouts-1.0.8/mod.config.json
@@ -3,6 +3,7 @@
   "author": "Sorata",
   "license": "None",
   "version": "1.0.8",
+  "dependencies": [],
   "db": {
     "bots": {
       "assault": {
